<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center_horizontal"
	android:background="@drawable/background">

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingTop="15dip" android:paddingBottom="15dip"
		android:gravity="center_horizontal">

		<ImageView android:id="@+id/logo" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:src="@drawable/logo2" />

	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingTop="5dip" android:paddingBottom="5dip"
		android:gravity="center_horizontal">

		<RadioGroup android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:id="@+id/group1">
			
			<TextView android:layout_width="fill_parent" android:text="@string/txtChooseDiff"
				android:layout_height="wrap_content" android:textColor="#ffffff"
				android:textStyle="bold" android:id="@+id/question"/>
			
			<RadioButton android:layout_height="wrap_content" android:layout_width="match_parent" android:checked="false" android:textColor="#FFF" android:id="@+id/easySetting"  android:text="@string/txtEasy"/>
			
			<RadioButton android:layout_height="wrap_content" android:layout_width="match_parent" android:checked="false" android:textColor="#FFF" android:id="@+id/mediumSetting"  android:text="@string/txtMedium" />
			
			<RadioButton android:layout_height="wrap_content" android:layout_width="match_parent" android:checked="false" android:textColor="#FFF" android:id="@+id/hardSetting"  android:text="@string/txtHard" />
			
		</RadioGroup>

	</LinearLayout>
	
	

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:paddingTop="5dip" android:paddingBottom="5dip"
		android:gravity="center_horizontal">

		<Button android:text="@string/btnUpdate" android:id="@+id/nextBtn"
			android:layout_width="80dip" android:layout_alignParentRight="true"
			android:layout_height="wrap_content" android:background="@drawable/button_selector"
			android:paddingTop="5dip" android:paddingBottom="5dip"
			android:textColor="#ffffff" />

	</LinearLayout>

</LinearLayout>
