<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center_horizontal"
	android:background="@drawable/background">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"

		android:gravity="center_horizontal">

		<ImageView
			android:id="@+id/logo"
			android:paddingTop="40dp"
			android:layout_marginLeft="-30dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/logo2" />

	</LinearLayout>



	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="30dp">

		<Button android:text="@string/bntPlay"
			android:id="@+id/playBtn"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_centerHorizontal="true"
			android:textColor="@color/colorwhite"
			android:background="@drawable/buttonselect"
			android:textStyle="bold" />


		<Button
			android:text="@string/btnLevels"
			android:id="@+id/levelsBtn"
			android:layout_below="@id/playBtn"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:layout_centerHorizontal="true"
			android:textColor="@color/colorwhite"
			android:background="@drawable/buttonselect"
			android:textStyle="bold" />

		<Button
			android:text="@string/btnRules"
			android:id="@+id/rulesBtn"
			android:layout_below="@id/levelsBtn"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:layout_centerHorizontal="true"
			android:textColor="@color/colorwhite"
			android:background="@drawable/buttonselect"
			android:textStyle="bold" />


		<Button android:text="@string/btnLang"
			android:id="@+id/langBtn"
			android:layout_below="@id/rulesBtn"
			android:layout_width="200dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:layout_centerHorizontal="true"
			android:textColor="@color/colorwhite"
			android:background="@drawable/buttonselect"
			android:textStyle="bold" />

	</RelativeLayout>
</LinearLayout>
